# llm_consultation_system

./: .gitignore  README.md  docker-compose.yml
auth_service/: pyproject.toml
auth_service/app/: main.py
auth_service/app/api/: deps.py  router.py  routes_auth.py
auth_service/app/core/: config.py  exceptions.py  security.py
auth_service/app/db/: base.py  models.py  session.py
auth_service/app/repositories/: users.py
auth_service/app/schemas/: auth.py  user.py
auth_service/app/usecases/: auth.py
auth_service/tests/: conftest.py  test_auth.py
bot_service/: pyproject.toml  run_bot.py  simple_bot.py
bot_service/app/: main.py
bot_service/app/bot/: dispatcher.py  handlers.py
bot_service/app/core/: config.py  jwt.py
bot_service/app/infra/: celery_app.py  redis.py
bot_service/app/services/: openrouter_client.py
bot_service/app/tasks/: __init__.py  llm_tasks.py
bot_service/tests/: test_jwt.py
screenshots/tests/: auth_service_coverage.txt  auth_service_test_results.txt
